kubectl/gluetun/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gluetun
    labels:
        app: gluetun
spec:
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: gluetun
    template:
        metadata:
            labels:
                app: gluetun
        spec:
            containers:
                # Run whatever you want to ensure is going out the tunnel here
                - name: qbittorrent
                  image: qbittorrentofficial/qbittorrent-nox:latest
                  resources:
                    requests:
                      memory: "1Gi"
                      cpu: "100m"
                    limits:
                      memory: "2Gi"
                      cpu: "1000m"
                  livenessProbe:
                    exec:
                      command:
                        - "sh"
                        - "-c"
                        - "wget -q -O - http://localhost:8080/api/v2/transfer/info | grep '\"connection_status\":\"connected\"' || exit 1"
                    periodSeconds: 30
                    initialDelaySeconds: 30
                    failureThreshold: 3

                  volumeMounts:
                    - mountPath: /config
                      name: nfs
                      subPath: applications/qbittorrent-nox/volumes/config
                    - mountPath: /downloads
                      name: nfs
                      subPath: applications/qbittorrent-nox/volumes/downloads
                - name: mousehole
                  image: tmmrtn/mousehole:latest
                  resources:
                    requests:
                      memory: "256Mi"
                      cpu: "10m"
                    limits:
                      memory: "512Mi"
                      cpu: "1000m"
                  volumeMounts:
                    - mountPath: /var/lib/mousehole
                      name: nfs
                      subPath: applications/mousehole/                      
            volumes:
              - name: nfs
                persistentVolumeClaim:
                  claimName: truenas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: gluetun
  ports:
    - name: manage-http
      port: 8079
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-security-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - qbittorrent.joeberry.org
  rules:
  - host: qbittorrent.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun
            port:
              number: 8079
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd,kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: qbittorrent.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun
            port:
              number: 8079
